# crafting_calculator

./: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.markdown  crafting_calculator.py  crafting_calculator_gui.py  pyproject.toml  test_gui.py  test_gui2.py  test_gui3.py  test_gui4.py  test_gui5.py  test_gui6.py  test_gui7.py  test_gui8.py  test_gui_tkinter.py
crafting/: __init__.py  common.py  shoppinglist.py
recipes/swchronicles/: meta.yml
recipes/swchronicles/Alchemy/: Attack Spell Book.yml  Blue Handwork Gem.yml  Defense Spell Book.yml  Galaxy Stone.yml  Green Handwork Gem.yml  Moon Stone.yml  Red Handwork Gem.yml  Sun Stone.yml  Utility Spell Book.yml
recipes/swchronicles/Cooking/: Cooking.yml
recipes/swchronicles/Processing/: Gem I.yml  Gem II.yml  Gem III.yml  Gem IV.yml  Handwork Crafting Tool.yml  Lumber.yml  Magic Crafting Tool.yml  Metal I.yml  Metal II.yml  Metal III.yml  Outfit Material.yml  Potion Crafting Tool.yml  Props for Sale.yml  String.yml
recipes/yonder/: carpenter_novice.yml  chef_novice.yml  constructor_novice.yml  meta.yml
recipes/yonder/brewer/: novice.yml  quests.yml
recipes/yonder/constructor/: master.yml  novice.yml
recipes/yonder/tailor/: novice.yml  quests.yml
recipes/yonder/tinker/: novice.yml
recipes/yonder/wayfarer/: base.yml  quests.yml
templates/: swchronicles.html
