[tool.poetry]
name = "crafting-calculator"
version = "0.1.0"
description = "A generic crafting recipe resource calculator"
authors = ["Alexander Skiba <ghostlyrics@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
